--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,12 @@ name = "artifact-gen"
 version = "0.1.0"
 description = ""
 authors = [
-    {name = "Your Name",email = "you@example.com"}
+    {name = "Rich McKnight",email = "r@richmcknight.com"}
 ]
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "PIL"
+    "Pillow"
 ]
 
 
